--- a/apps/keycloak/src/main/fabric8/deploymentConfig.yml
+++ b/apps/keycloak/src/main/fabric8/deploymentConfig.yml
@@ -32,14 +32,14 @@ spec:
             "image": "fabric8/envsubst-file:1.0.0",
             "imagePullPolicy": "IfNotPresent",
             "args": [
-              "fabric8-realm.json"
+              "openfact-realm.json"
             ],
             "env": [{
-              "name": "WIT_URL",
+              "name": "SYNC_URL",
               "valueFrom": {
                       "configMapKeyRef": {
                           "name": "keycloak",
-                          "key": "wit.api.url"
+                          "key": "sync.api.url"
                       }
                   }
             },
@@ -100,8 +100,8 @@ spec:
             "volumeMounts": [
             {
               "name": "keycloak-config",
-              "mountPath": "/workdir/fabric8-realm.json",
-              "subPath": "config/fabric8-realm.json"
+              "mountPath": "/workdir/openfact-realm.json",
+              "subPath": "config/openfact-realm.json"
             },
             {
               "name": "keycloak-subst-config",
@@ -119,7 +119,7 @@ spec:
         - -Djavax.net.ssl.trustStore=/opt/jboss/keycloak/standalone/configuration/tls/openshift-truststore.jks
         - -Dkeycloak.migration.action=import
         - -Dkeycloak.migration.provider=singleFile
-        - -Dkeycloak.migration.file=/opt/jboss/keycloak/standalone/configuration/import/fabric8-realm.json
+        - -Dkeycloak.migration.file=/opt/jboss/keycloak/standalone/configuration/import/openfact-realm.json
         - -Dkeycloak.migration.strategy=OVERWRITE_EXISTING
 
         env:
@@ -188,5 +188,5 @@ spec:
         configMap:
           name: keycloak
           items:
-          - key: fabric8-realm.json
-            path: config/fabric8-realm.json
+          - key: openfact-realm.json
+            path: config/openfact-realm.json
