--- a/apps/keycloak/src/main/fabric8/deployment.yml
+++ b/apps/keycloak/src/main/fabric8/deployment.yml
@@ -1,7 +1,7 @@
 metadata:
   annotations:
-    configmap.fabric8.io/update-on-change: "keycloak"
-    fabric8.io/target-platform: "kubernetes"
+    configmap.openfact.io/update-on-change: "keycloak"
+    openfact.io/target-platform: "kubernetes"
 spec:
   replicas: 1
   strategy:
@@ -52,7 +52,7 @@ spec:
               "valueFrom": {
                       "configMapKeyRef": {
                           "name": "keycloak",
-                          "key": "fabric8.url"
+                          "key": "openfact.url"
                       }
                   }
             },
