--- a/apps/fabric8/src/main/fabric8/cm.yml
+++ b/apps/fabric8/src/main/fabric8/cm.yml
@@ -5,17 +5,17 @@ metadata:
   annotations:
     # when using the proxy 
     # apiserver.base.path: "/_p/oso"
-    expose.config.fabric8.io/url-key: proxy.pass.url
-    #expose.config.fabric8.io/host-key: proxy.pass.server
-    #expose.config.fabric8.io/url-key: apiserver.url
-    #expose.config.fabric8.io/host-key: apiserver.host
-    expose.config.fabric8.io/console-url-key: openshift.console.url
-    expose.config.fabric8.io/apiserver-key: apiserver.host
-    expose.config.fabric8.io/apiserver-url-key: apiserver.url
-    expose-full.service-key.config.fabric8.io/keycloak: keycloak.url
-    expose-full.service-key.config.fabric8.io/sync: sync.api.url
-    expose.service-key.config.fabric8.io/forge: forge.api.url
-    expose.config.fabric8.io/apiserver-protocol-key: apiserver.protocol
+    expose.config.openfact.io/url-key: proxy.pass.url
+    #expose.config.openfact.io/host-key: proxy.pass.server
+    #expose.config.openfact.io/url-key: apiserver.url
+    #expose.config.openfact.io/host-key: apiserver.host
+    expose.config.openfact.io/console-url-key: openshift.console.url
+    expose.config.openfact.io/apiserver-key: apiserver.host
+    expose.config.openfact.io/apiserver-url-key: apiserver.url
+    expose-full.service-key.config.openfact.io/keycloak: keycloak.url
+    expose-full.service-key.config.openfact.io/sync: sync.api.url
+    expose.service-key.config.openfact.io/forge: forge.api.url
+    expose.config.openfact.io/apiserver-protocol-key: apiserver.protocol
 data:
   apiserver.host: kubernetes
   apiserver.url: http://kubernetes
