real first template

--- a/apps/keycloak/src/main/fabric8/deployment.yml
+++ b/apps/keycloak/src/main/fabric8/deployment.yml
@@ -48,7 +48,7 @@ spec:
                   }
             },
             {
-              "name": "FABRIC8_URL",
+              "name": "OPENFACT_URL",
               "valueFrom": {
                       "configMapKeyRef": {
                           "name": "keycloak",
