--- a/apps/keycloak/src/main/fabric8/deploymentConfig.yml
+++ b/apps/keycloak/src/main/fabric8/deploymentConfig.yml
@@ -53,7 +53,7 @@ spec:
                   }
             },
             {
-              "name": "FABRIC8_URL",
+              "name": "OPENFACT_URL",
               "valueFrom": {
                       "configMapKeyRef": {
                           "name": "keycloak",
