--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,3 @@
-<!--
-
-     Copyright 2005-2015 Red Hat, Inc.
-
-     Red Hat licenses this file to you under the Apache License, version
-     2.0 (the "License"); you may not use this file except in compliance
-     with the License.  You may obtain a copy of the License at
-
-        http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-     implied.  See the License for the specific language governing
-     permissions and limitations under the License.
-
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -24,12 +7,12 @@
     <version>9</version>
   </parent>
 
-  <groupId>io.fabric8.platform</groupId>
+  <groupId>io.openfact.platform</groupId>
   <artifactId>parent</artifactId>
-  <version>4.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Fabric8 Platform :: Parent</name>
+  <name>Openfact Platform :: Parent</name>
 
   <url>http://openfact.io/</url>
   <inceptionYear>2015</inceptionYear>
@@ -55,17 +38,17 @@
   <developers>
     <developer>
       <id>geeks</id>
-      <name>Fabric8 Development Team</name>
-      <email>fabric8@googlegroups.com</email>
-      <organization>fabric8</organization>
+      <name>Openfact Development Team</name>
+      <email>openfact@googlegroups.com</email>
+      <organization>openfact</organization>
       <organizationUrl>http://openfact.io/</organizationUrl>
     </developer>
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:fabric8io/fabric8-platform.git</connection>
-    <developerConnection>scm:git:git@github.com:fabric8io/fabric8-platform.git</developerConnection>
-    <url>http://github.com/fabric8io/fabric8-platform</url>
+    <connection>scm:git:git@github.com:openfact/openfact-platform.git</connection>
+    <developerConnection>scm:git:git@github.com:openfact/openfact-platform.git</developerConnection>
+    <url>http://github.com/openfact/openfact-platform</url>
     <tag>app-console-2.0.1</tag>
   </scm>
 
