--- a/systest/Jenkinsfile
+++ b/systest/Jenkinsfile
@@ -27,7 +27,7 @@ podTemplate(label: label, serviceAccount: 'jenkins', containers: [
                 [$class: 'HostPathVolume', mountPath: '/var/run/docker.sock', hostPath: '/var/run/docker.sock']
         ]) {
   node(label) {
-    git 'https://github.com/fabric8io/fabric8-platform.git'
+    git 'https://github.com/fabric8io/openfact-platform.git'
 
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
@@ -54,7 +54,7 @@ cd ..
       stage 'Wait for rollout'
       sh "~/.fabric8/bin/gofabric8 wait-for --all --timeout=60m --namespace=${testNamespace}"
 
-      echo "Deployed master of fabric8-platform into namespace: ${testNamespace}"
+      echo "Deployed master of openfact-platform into namespace: ${testNamespace}"
 
       stage 'Integration Test'
       sh """
