--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,11 @@
     <fabric8.devops.version>2.2.335</fabric8.devops.version>
     <fabric8.forge.version>2.3.88</fabric8.forge.version>
     <fabric8.ipaas.version>2.2.168</fabric8.ipaas.version>
-    <keycloak.version>v6e0b753</keycloak.version>
+    <keycloak.version>v15751c8</keycloak.version>
     <kubeflix.version>1.0.28</kubeflix.version>
     <kubernetes.zipkin.version>0.1.8</kubernetes.zipkin.version>
     <mattermost.version>vbc557c5</mattermost.version>
+    <gitea.version>vbc557c5</gitea.version>
     <fabric8.maven.plugin.version>3.5.0</fabric8.maven.plugin.version>
     <maven.require.version>3.1.1</maven.require.version>
     <maven.enforcer.plugin.version>1.4</maven.enforcer.plugin.version>
